test: opensearch 환경 구성